테이블명에 따른 최초 provider와 메소드를 매핑하는 설정 기능 추가

--- a/src/main/resources/messages/Messages.properties
+++ b/src/main/resources/messages/Messages.properties
@@ -5,3 +5,21 @@ sql.copied.error=Copy error
 must.be.number=Must be Number
 error.occurs.during.sql.creation=Error occurs during SQL creation: {0}
 unsupported.database.type=Unsupported database type {0}. It is created in MYSQL format.
+
+table.mapping.settings.title=Table Column Mapping
+table.mapping.settings.description=Configure mapping rules for table columns
+table.mapping.add.rule=Add Rule
+table.mapping.delete=Delete
+table.mapping.enabled=Enabled
+table.mapping.text=Text
+table.mapping.match.type=Match Type
+table.mapping.provider=Provider
+table.mapping.method=Method
+
+match.type.starts.with=startsWith
+match.type.ends.with=endsWith
+match.type.contains=contains
+match.type.equals=equals
+
+validation.duplicate.rules=Duplicate rules found. Please check and try again.
+validation.duplicate.rules.title=Duplicate Error
