--- a/src/main/resources/messages/Messages_ko.properties
+++ b/src/main/resources/messages/Messages_ko.properties
@@ -1,7 +1,25 @@
-sql.copied.to.clipboard=SQL? ????? ???????
-sql.copied.completion=?? ??
-sql.copied.error.message=????? ???? ? ??? ??????: {0}
-sql.copied.error=?? ??
-must.be.number=??? ???????.
-error.occurs.during.sql.creation=SQL ?? ? ?? ??: {0}
-unsupported.database.type={0}? ???? ?? ?????? ?????. MYSQL format?? ?????.
+sql.copied.to.clipboard=SQL\uC774 \uD074\uB9BD\uBCF4\uB4DC\uC5D0 \uBCF5\uC0AC\uB418\uC5C8\uC2B5\uB2C8\uB2E4.
+sql.copied.completion=\uBCF5\uC0AC \uC644\uB8CC
+sql.copied.error.message=\uD074\uB9BD\uBCF4\uB4DC\uB97C \uBCF5\uC0AC\uD558\uB294 \uB3D9\uC548 \uC624\uB958\uAC00 \uBC1C\uC0DD\uD588\uC2B5\uB2C8\uB2E4: {0}
+sql.copied.error=\uBCF5\uC0AC \uC624\uB958
+must.be.number=\uBC88\uD638\uC5EC\uC57C \uD568
+error.occurs.during.sql.creation=SQL\uC744 \uB9CC\uB4DC\uB294 \uB3D9\uC548 \uC624\uB958\uAC00 \uBC1C\uC0DD\uD588\uC2B5\uB2C8\uB2E4: {0}
+unsupported.database.type=\uC9C0\uC6D0\uB418\uC9C0 \uC54A\uB294 \uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uC720\uD615 {0}\uC785\uB2C8\uB2E4. MYSQL \uD615\uC2DD\uC73C\uB85C \uC0DD\uC131\uB429\uB2C8\uB2E4.
+
+table.mapping.settings.title=\uD14C\uC774\uBE14 \uCEEC\uB7FC \uB9E4\uD551
+table.mapping.settings.description=\uD14C\uC774\uBE14 \uCEEC\uB7FC\uC5D0 \uB300\uD55C \uB9E4\uD551 \uADDC\uCE59\uC744 \uC124\uC815\uD569\uB2C8\uB2E4
+table.mapping.add.rule=\uADDC\uCE59 \uCD94\uAC00
+table.mapping.delete=\uC0AD\uC81C
+table.mapping.enabled=\uC0AC\uC6A9\uC5EC\uBD80
+table.mapping.text=\uD14D\uC2A4\uD2B8
+table.mapping.match.type=\uBB38\uC790\uC5F4 \uBE44\uAD50
+table.mapping.provider=Provider
+table.mapping.method=\uBA54\uC18C\uB4DC
+
+match.type.starts.with=\uC2DC\uC791\uD558\uB294
+match.type.ends.with=\uB05D\uB098\uB294
+match.type.contains=\uD3EC\uD568\uD558\uB294
+match.type.equals=\uC77C\uCE58\uD558\uB294
+
+validation.duplicate.rules=\uC911\uBCF5\uB41C \uADDC\uCE59\uC774 \uC788\uC2B5\uB2C8\uB2E4. \uD655\uC778 \uD6C4 \uB2E4\uC2DC \uC2DC\uB3C4\uD574\uC8FC\uC138\uC694.
+validation.duplicate.rules.title=\uC911\uBCF5 \uC624\uB958
