설정 내보내기, 불러오기 기능 추가

--- a/src/main/resources/messages/Messages.properties
+++ b/src/main/resources/messages/Messages.properties
@@ -16,6 +16,19 @@ table.mapping.match.type=Match Type
 table.mapping.provider=Provider
 table.mapping.method=Method
 
+table.mapping.export=Export
+table.mapping.import=Import
+table.mapping.export.title=Export settings
+table.mapping.import.title=Import settings
+table.mapping.export.success=Settings were successfully exported
+table.mapping.export.success.title=Export success
+table.mapping.export.error=Error exporting settings: {0}
+table.mapping.export.error.title=Export error
+table.mapping.import.success=Settings were successfully imported
+table.mapping.import.success.title=Import success
+table.mapping.import.error=Error occurred while importing settings: {0}
+table.mapping.import.error.title=Import error
+
 match.type.starts.with=startsWith
 match.type.ends.with=endsWith
 match.type.contains=contains
