--- a/src/main/resources/messages/Messages_ko.properties
+++ b/src/main/resources/messages/Messages_ko.properties
@@ -16,6 +16,19 @@ table.mapping.match.type=\uBB38\uC790\uC5F4 \uBE44\uAD50
 table.mapping.provider=Provider
 table.mapping.method=\uBA54\uC18C\uB4DC
 
+table.mapping.export=\uB0B4\uBCF4\uB0B4\uAE30
+table.mapping.import=\uBD88\uB7EC\uC624\uAE30
+table.mapping.export.title=\uC124\uC815 \uB0B4\uBCF4\uB0B4\uAE30
+table.mapping.import.title=\uC124\uC815 \uBD88\uB7EC\uC624\uAE30
+table.mapping.export.success=\uC124\uC815\uC774 \uC131\uACF5\uC801\uC73C\uB85C \uB0B4\uBCF4\uB0B4\uC84C\uC2B5\uB2C8\uB2E4.
+table.mapping.export.success.title=\uB0B4\uBCF4\uB0B4\uAE30 \uC131\uACF5
+table.mapping.export.error=\uC124\uC815 \uB0B4\uBCF4\uB0B4\uAE30 \uC911 \uC624\uB958\uAC00 \uBC1C\uC0DD\uD588\uC2B5\uB2C8\uB2E4: {0}
+table.mapping.export.error.title=\uB0B4\uBCF4\uB0B4\uAE30 \uC624\uB958
+table.mapping.import.success=\uC124\uC815\uC774 \uC131\uACF5\uC801\uC73C\uB85C \uBD88\uB7EC\uC640\uC84C\uC2B5\uB2C8\uB2E4.
+table.mapping.import.success.title=\uBD88\uB7EC\uC624\uAE30 \uC131\uACF5
+table.mapping.import.error=\uC124\uC815 \uBD88\uB7EC\uC624\uAE30 \uC911 \uC624\uB958\uAC00 \uBC1C\uC0DD\uD588\uC2B5\uB2C8\uB2E4: {0}
+table.mapping.import.error.title=\uBD88\uB7EC\uC624\uAE30 \uC624\uB958
+
 match.type.starts.with=\uC2DC\uC791\uD558\uB294
 match.type.ends.with=\uB05D\uB098\uB294
 match.type.contains=\uD3EC\uD568\uD558\uB294
