기본설정값 추가.

--- a/src/main/resources/messages/Messages.properties
+++ b/src/main/resources/messages/Messages.properties
@@ -28,6 +28,9 @@ table.mapping.import.success=Settings were successfully imported
 table.mapping.import.success.title=Import success
 table.mapping.import.error=Error occurred while importing settings: {0}
 table.mapping.import.error.title=Import error
+table.mapping.reset=Reset
+table.mapping.reset.confirm=Are you sure you want to return all settings to default?
+table.mapping.reset.title=Reset settings
 
 match.type.starts.with=startsWith
 match.type.ends.with=endsWith
