--- a/src/main/resources/messages/Messages_ko.properties
+++ b/src/main/resources/messages/Messages_ko.properties
@@ -28,6 +28,9 @@ table.mapping.import.success=\uC124\uC815\uC774 \uC131\uACF5\uC801\uC73C\uB85C \
 table.mapping.import.success.title=\uBD88\uB7EC\uC624\uAE30 \uC131\uACF5
 table.mapping.import.error=\uC124\uC815 \uBD88\uB7EC\uC624\uAE30 \uC911 \uC624\uB958\uAC00 \uBC1C\uC0DD\uD588\uC2B5\uB2C8\uB2E4: {0}
 table.mapping.import.error.title=\uBD88\uB7EC\uC624\uAE30 \uC624\uB958
+table.mapping.reset=\uCD08\uAE30\uD654
+table.mapping.reset.confirm=\uBAA8\uB4E0 \uC124\uC815\uC744 \uAE30\uBCF8\uAC12\uC73C\uB85C \uB418\uB3CC\uB9AC\uC2DC\uACA0\uC2B5\uB2C8\uAE4C?
+table.mapping.reset.title=\uC124\uC815 \uCD08\uAE30\uD654
 
 match.type.starts.with=\uC2DC\uC791\uD558\uB294
 match.type.ends.with=\uB05D\uB098\uB294
