몇몇 기기에서 우클릭 메뉴가 나타나지 않는다. 원인 불명. 메뉴는 무조건 나타나게 하고, 클릭시 경고메시지 출력하도록 수정.

--- a/src/main/resources/messages/Messages.properties
+++ b/src/main/resources/messages/Messages.properties
@@ -39,3 +39,5 @@ match.type.equals=equals
 
 validation.duplicate.rules=Duplicate rules found. Please check and try again.
 validation.duplicate.rules.title=Duplicate Error
+
+error.wrong.right.click=No table selected.
