--- a/src/main/resources/messages/Messages_ko.properties
+++ b/src/main/resources/messages/Messages_ko.properties
@@ -39,3 +39,5 @@ match.type.equals=\uC77C\uCE58\uD558\uB294
 
 validation.duplicate.rules=\uC911\uBCF5\uB41C \uADDC\uCE59\uC774 \uC788\uC2B5\uB2C8\uB2E4. \uD655\uC778 \uD6C4 \uB2E4\uC2DC \uC2DC\uB3C4\uD574\uC8FC\uC138\uC694.
 validation.duplicate.rules.title=\uC911\uBCF5 \uC624\uB958
+
+error.wrong.right.click=Table\uC744 \uC120\uD0DD\uD558\uC138\uC694.
