Database Tools plugin 확인 코드 추가

--- a/src/main/resources/messages/Messages.properties
+++ b/src/main/resources/messages/Messages.properties
@@ -41,3 +41,4 @@ validation.duplicate.rules=Duplicate rules found. Please check and try again.
 validation.duplicate.rules.title=Duplicate Error
 
 error.wrong.right.click=No table selected.
+error.database.tools.not.install=Database Tools plugin is not installed
