--- a/src/main/resources/messages/Messages_ko.properties
+++ b/src/main/resources/messages/Messages_ko.properties
@@ -41,3 +41,4 @@ validation.duplicate.rules=\uC911\uBCF5\uB41C \uADDC\uCE59\uC774 \uC788\uC2B5\uB
 validation.duplicate.rules.title=\uC911\uBCF5 \uC624\uB958
 
 error.wrong.right.click=Table\uC744 \uC120\uD0DD\uD558\uC138\uC694.
+error.database.tools.not.install=Database Tools plugin is not installed
